# QuasiPiler

./: CMakeLists.txt  Doxyfile  readme.md
.github/workflows/: html.yml  tests.yml
include/: lexer.hpp  parser.hpp  reader.hpp
src/: lexer.cpp  main.cpp  parser.cpp  reader.cpp
tests/: lexer_tests.cpp  main.cpp  parser.cpp  reader_tests.cpp
